@@ -2,6 +2,8 @@
 
 *eix-0.28.5
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Allow that eix/portage config files are (recursively read) dirs,
+	  see e.g. http://bugs.gentoo.org/show_bug.cgi?id=467276
 	- Fixes in zsh completion for --print and --*overlay*
 	- -fstrict-enums -fno-rtti -fno-threadsafe-statics -fvect-cost-model
 	- eix-sync: Exit with status 3 if neither main tree changed nor
